charts/agent/examples/recommended-config/rendered/gateway/deployment.yaml
---
# Source: agent/charts/gateway/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-gateway
  namespace: observe
  labels:
    helm.sh/chart: gateway-0.159.0
    app.kubernetes.io/name: gateway
    app.kubernetes.io/instance: example
    app.kubernetes.io/version: "0.154.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: opentelemetry-collector
    app.kubernetes.io/component: standalone-collector
spec:
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: gateway
      app.kubernetes.io/instance: example
      component: standalone-collector
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/config: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        observe_monitor_path: /metrics
        observe_monitor_port: "8888"
        observe_monitor_purpose: observecollection
        observe_monitor_scrape: "true"
        observeinc_com_scrape: "false"
      labels:
        app.kubernetes.io/name: gateway
        app.kubernetes.io/instance: example
        component: standalone-collector

    spec:

      serviceAccountName: observe-agent-service-account
      automountServiceAccountToken: true
      securityContext:
        {}
      containers:
        - name: gateway
          command:
            - /observe-agent
          args:
            - --config=/conf/relay.yaml
            - start
            - --observe-config=/observe-agent-conf/observe-agent.yaml
            - --config=/conf/relay.yaml
            - --feature-gates=+connector.spanmetrics.includeCollectorInstanceID
          securityContext:
            {}
          image: "observeinc/observe-agent:2.18.0"
          imagePullPolicy: IfNotPresent
          ports:

            - name: jaeger-compact
              containerPort: 6831
              protocol: UDP
            - name: jaeger-grpc
              containerPort: 14250
              protocol: TCP
            - name: jaeger-thrift
              containerPort: 14268
              protocol: TCP
            - name: metrics
              containerPort: 8888
              protocol: TCP
            - name: otlp
              containerPort: 4317
              protocol: TCP
            - name: otlp-http
              containerPort: 4318
              protocol: TCP
            - name: zipkin
              containerPort: 9411
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 5
            httpGet:
              path: /status
              port: 13133
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 5
            httpGet:
              path: /status
              port: 13133
          resources:
            limits:
              memory: 768Mi
            requests:
              cpu: 300m
              memory: 768Mi
          volumeMounts:
            - mountPath: /conf
              name: gateway-configmap
            - mountPath: /observe-agent-conf
              name: observe-agent-deployment-config
      terminationGracePeriodSeconds: 30
      volumes:
        - name: gateway-configmap
          configMap:
            name: gateway
            items:
              - key: relay
                path: relay.yaml
        - configMap:
            defaultMode: 420
            items:
            - key: relay
              path: observe-agent.yaml
            name: observe-agent
          name: observe-agent-deployment-config
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: observeinc.com/unschedulable
                operator: DoesNotExist
              - key: kubernetes.io/os
                operator: NotIn
                values:
                - windows
      hostNetwork: false
      hostPID: false
